Fix underline on Safari

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -169,6 +169,7 @@ a:active, a:hover, a:focus {
   text-align: center;
   transform: translatex(-50%);
   color: white;
+  -webkit-text-decoration-line: underline;
 }
 
 blockquote {
